# tenders

./: .gitignore  deploy.sh  docker-compose.prod.yml
.github/workflows/: deploy.yml
backend/: .env.example  package.json  server.ts
backend/controllers/: authController.ts
backend/routes/: search.ts  tender-notice.ts  tenders.ts
backend/services/: aiService.ts  databaseService.ts  emailService.ts  subscriptionService.ts  tenderService.ts
frontend/: .env.example  Dockerfile.prod
frontend/src/: config.ts  index.css
frontend/src/api/: ai.ts  config.ts  tenders.ts
frontend/src/client/: apiClient.ts
frontend/src/components/dashboard/: TableStatsGrid.tsx
frontend/src/components/layout/: AuthenticatedHeader.tsx
frontend/src/components/table/: TablePaginationControls.tsx  TenderTable.tsx
frontend/src/components/tenderNotice/: TenderNoticeBody.tsx  TenderNoticeSummary.tsx
frontend/src/pages/: Home.tsx  SignIn.tsx  SignUp.tsx  TablePage.tsx  TenderNoticePage.tsx
ml-backend/: .env.example
nginx/: nginx.conf
scraper/: Dockerfile  pyproject.toml  scrapy.cfg
scraper/src/purchasingcad/: celery_app.py  items.py  scrapy_settings.py
scraper/src/purchasingcad/pipelines/: dedup.py  supabase_pipeline.py
scraper/src/purchasingcad/spiders/: alberta.py  bc.py  calgary.py  canadabuys.py  edmonton.py  manitoba.py  new_brunswick.py  newfoundland.py  nova_scotia.py  nunavut.py  nwt.py  ontario.py  ottawa.py  pei.py  saskatchewan.py  seao.py  toronto.py  vancouver.py  winnipeg.py  yukon.py
scraper/src/purchasingcad/tasks/: crawl.py
(+2 files in other folders)
