[project]
name = "purchasingcad"
version = "0.2.0"
description = "Canadian procurement scraper for Mapletenders (Supabase pipeline)"
requires-python = ">=3.13"
dependencies = [
    "scrapy>=2.14.0",
    "scrapy-playwright>=0.0.40",
    "celery[redis]>=5.5.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/purchasingcad"]
